# iegnine

./: '  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
.github/workflows/: linux-clang.yml  linux.yml  windows-clang.yml  windows.yml
include/: BCIEngine.hh  FCIEngine.hh  bc_iengine.hh  clause.hh  enums.hh  fc_iengine.hh  iengine.hh  inference_engine.hh  statement.hh  tt_iengine.hh  utils.hh
src/: BCIEngine.cc  CMakeLists.txt  FCIEngine.cc  bc_iengine.cc  clause.cc  fc_iengine.cc  iengine.cc  inference_engine.cc  main.cc  statement.cc  tt_iengine.cc
test/: CMakeLists.txt
